--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div id="rouletteScreen">
-            <h1>오늘의 점심 메뉴</h1>
+            <h1>오늘의 회식 메뉴</h1>
             <div class="roulette-container">
                 <div class="pointer"></div>
                 <div class="roulette">
