--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="점심 메뉴를 룰렛으로 재미있게 무작위 선택!">
     <meta property="og:image" content="thumbnail.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://github.com/yourusername/rouletteSelector">
+    <meta property="og:url" content="https://sjpyo79.github.io/rouletteSelector/">
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
