--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#4CAF50">
     <link rel="icon" type="image/png" sizes="192x192" href="iconfile.png">
-    <meta property="og:title" content="룰렛 점심메뉴 선택기">
-    <meta property="og:description" content="점심 메뉴를 룰렛으로 재미있게 무작위 선택!">
+    <meta property="og:title" content="룰렛 회식메뉴 선택기">
+    <meta property="og:description" content="회식 메뉴를 룰렛으로 재미있게 무작위 선택! by Primo">
     <meta property="og:image" content="thumbnail.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sjpyo79.github.io/rouletteSelector/">
