--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="회식 메뉴를 룰렛으로 재미있게 무작위 선택! by Primo">
     <meta property="og:image" content="thumbnail.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sjpyo79.github.io/rouletteSelector/">
+    <meta property="og:url" content="https://github.com/yourusername/rouletteSelector">
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
@@ -41,6 +41,7 @@
                 <button id="backToRoulette" style="margin-right:1rem;">돌아가기</button>
                 <h2 style="margin:0;">메뉴 편집</h2>
             </div>
+            
             <!-- 메뉴 편집 폼은 추후 구현 -->
             <p>여기에 메뉴 편집 UI가 들어갑니다.</p>
         </div>
@@ -52,6 +53,7 @@
             <button id="closePopup">닫기</button>
         </div>
     </div>
+    <footer id="mainFooter">Made by Primo</footer>
     <script src="script.js"></script>
 </body>
 </html>
