--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
                     <svg class="wheel" width="400" height="400" viewBox="0 0 400 400"></svg>
                 </div>
             </div>
-            <button id="spinButton">룰렛 돌리기</button>
+            <div style="display:flex;align-items:center;justify-content:center;margin-top:2rem;gap:2rem;">
+                <div id="powerBarContainer" style="height:100px;width:20px;display:flex;align-items:flex-end;background:#eee;border-radius:10px;overflow:hidden;">
+                    <div id="powerBar" style="width:100%;height:0;background:#4CAF50;"></div>
+                </div>
+                <button id="spinButton">룰렛 돌리기</button>
+            </div>
             <button id="editMenuButton" onclick="window.location.href='menuedit.html'">메뉴 편집</button>
         </div>
         <div id="editScreen" style="display:none;">
